[package]
name = "kvs"
version = "0.1.0"
description = "A simple key/value store"
authors = ["zhongzc <zhongzc_arch@outlook.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"