[package]
name = "kvs"
version = "0.1.0"
description = "A simple key/value store"
authors = ["zhongzc <zhongzc_arch@outlook.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.7.1"
byteorder = "1"
sled = "0.31.0"
rayon = "1.1"
num_cpus = "1.12.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "engine"
harness = false

